# storyteller

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: fmt.yml  licenses_and_advisories.yml  linter.yml  msrv.yml  test.yml
docs/sketches/: introduction.excalidraw
examples/: json.rs  json_lines.rs  minimal.rs  readme.rs
src/: channel.rs  handler.rs  lib.rs  listener.rs  message.rs  reporter.rs  tests.rs
src/channel_reporter/: channel.rs  listener.rs  mod.rs  reporter.rs
src/reporter/: channel_reporter.rs
tests/: collecting_handler.rs  handler_guard.rs  multi_handler.rs  registering_handler.rs  test_handler.rs
