[package]
name = "storyteller"
version = "0.6.1"
edition = "2018"

authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Library focused on supporting user oriented output while supporting multiple output types (e.g. json, a progressbar, etc.)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/foresterre/storyteller"

exclude = ["/.github", "docs/sketches/*.png"]

[package.metadata]
msrv = "1.38"

[features]
default = ["channel_reporter"]
channel_reporter = ["crossbeam-channel", "once_cell"]

[dependencies.crossbeam-channel]
version = "0.5"
optional = true

# Pin the once_cell version to 1.14, to keep the MSRV 1.38; once_cell 1.15 has an MSRV of 1.56.
# once_cell itself is not directly used by storyteller, but we depend on it down-tree via crossbeam-channel.
#
# once_cell changelog: https://github.com/matklad/once_cell/blob/master/CHANGELOG.md#1150
[dependencies.once_cell]
version = "~1.14.0"
optional = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.16.2"

# parameterized tests
yare = "1.0.1"

# --- Examples

[[example]]
name = "json_lines"
required-features = ["channel_reporter"]

[[example]]
name = "readme"
required-features = ["channel_reporter"]

# --- Integration tests

[[test]]
name = "collecting_handler"
required-features = ["channel_reporter"]

[[test]]
name = "multi_handler"
required-features = ["channel_reporter"]

[[test]]
name = "registering_handler"
required-features = ["channel_reporter"]
