[package]
name = "storyteller"
version = "0.8.1"
edition = "2018"

authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Library focused on supporting user oriented output while supporting multiple output types (e.g. json, a progressbar, etc.)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/foresterre/storyteller"

exclude = ["/.github", "docs/sketches/*.png"]
rust-version = "1.56"

[features]
default = ["channel_reporter"]
channel_reporter = ["crossbeam-channel"]

[dependencies.crossbeam-channel]
version = "0.5"
optional = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17.5"

# parameterized tests
yare = "1.0.2"

# --- Examples

[[example]]
name = "json"
required-features = ["channel_reporter"]

[[example]]
name = "minimal"
required-features = ["channel_reporter"]

# --- Integration tests

[[test]]
name = "collecting_handler"
required-features = ["channel_reporter"]

[[test]]
name = "multi_handler"
required-features = ["channel_reporter"]

[[test]]
name = "registering_handler"
required-features = ["channel_reporter"]
